[package]
name = "virtio-blk"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
bitflags = "2.3.0"
zerocopy = { version = "0.7.5", features = ["derive"] }


[features]
default = ["alloc"]
alloc = ["zerocopy/alloc"]

[dev-dependencies]
zerocopy = { version = "0.7.5", features = ["alloc"] }
